--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.1.5",
     "@nuxtjs/vuetify": "^1.12.3"
   }
 }
